<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KanazPad</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="folder_name">Folder Name</string>
    <string name="create_folder">Create Folder</string>
    <string name="export">Export</string>
    <string name="import_file">Import</string>
    <string name="confirm_delete">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
